--- a/src/pages/notes/notes.html
+++ b/src/pages/notes/notes.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Choose alert</ion-title>
+    <ion-title>{{title}}</ion-title>
   </ion-navbar>
   <ion-toolbar>
     <ion-segment color="primary" [(ngModel)]="testMode">
