--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -20,7 +20,7 @@
             <ion-list inset>
 
               <ion-item>
-                <ion-input type="text" placeholder="Email" name="email" [(ngModel)]="email" required></ion-input>
+                <ion-input type="email" placeholder="Email" name="email" [(ngModel)]="email" required></ion-input>
               </ion-item>
 
               <ion-item>
