--- a/src/pages/floor-location/floor-location.html
+++ b/src/pages/floor-location/floor-location.html
@@ -6,7 +6,14 @@
 
 <ion-content padding>
   <div #zoom class="zoom">
-    <ion-img width="100%" height="100%" src="http://placehold.it/300x200" (click)="onMapClick($event)"></ion-img>
+    <div>
+      <img id="div1" class="div1" src="{{floorPlanURL}}" (click)="onMapClick($event)">
+    </div>
+    <div>
+      <img id="div2" class="div2" src="../../assets/imgs/red_sniper.png">
+    </div>
   </div>
-  <button ion-button full (click)="onFloorLocation(100, 100)">Submit</button>
+  <div>
+    <button ion-button full (click)="onFloorLocation(sniperCoordinateX, sniperCoordinateY)">Submit</button>
+  </div>
 </ion-content>
