--- a/src/pages/student/student.html
+++ b/src/pages/student/student.html
@@ -12,7 +12,7 @@
   <ion-list>
     <ion-item *ngFor="let student of searchStudents" (click)="onClick(student.name, student.photo)">
       <ion-avatar item-start>
-        <img src="http://{{ipAddress}}:1000/public/photosStudents/{{student.photo}}">
+        <img src="http://{{ipAddress}}/public/photosStudents/{{student.photo}}">
       </ion-avatar>
       {{ student.name }}
     </ion-item>
